# mod

./: CMakeLists.txt  run_bench.sh
src/: mod.cpp  mod_approx.cpp  mod_simd.cpp  mod_simd_div.cpp  mod_simd_shr.cpp  mod_simd_sub.cpp  mod_simd_sub_unrolled.cpp
